--- a/pages/styles.css
+++ b/pages/styles.css
@@ -1,4 +1,4 @@
-body {
+body h1 {
     font-family: 'SF Pro Text', 'SF Pro Icons', 'Helvetica Neue', 'Helvetica',
       'Arial', sans-serif;
     padding: 20px 20px 60px;
